welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: '<-' expected but ')' found.
for (lignes<0 to 3){
                  ^Runner:21: error: illegal start of simple expression
	}
        ^