welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code

for (lignes<0 to 3){
  for (pas1<-0 to 3){
  avance()
  }gauche()
  for (pas2<-0 to 1){
  avance()
  }
  droite()
  for (pas3<-0 to 3){
  avance()
  }droite()
  for (pas4<-0 to 1){
  avance()
  }
  gauche()
}

